Refactor MembershipFailureTest (#3226)
1. Switches from HazelcastInstanceFactory to TestHazelcastInstanceFactory in MembershipFailureTest_withTCP.
2. Switches to `MembershipFailureTest#newHazelcastInstance` for instance creation in all tests. Now, `masterCandidate_canGracefullyShutdown_whenMasterGoesDown` takes "hazelcast.heartbeat.failuredetector.type" from the test parameter and uses FirewallingNodeContext.

GitOrigin-RevId: 8802eaf000d95d3137693d1fdc9836bebe040aab