@@ -39,10 +39,10 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameter;
+import org.junit.runners.Parameterized.Parameters;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -74,11 +74,9 @@ import static com.hazelcast.test.PacketFiltersUtil.dropOperationsBetween;
 import static com.hazelcast.test.PacketFiltersUtil.dropOperationsFrom;
 import static com.hazelcast.test.PacketFiltersUtil.rejectOperationsBetween;
 import static com.hazelcast.test.PacketFiltersUtil.resetPacketFiltersFrom;
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.junit.runners.Parameterized.UseParametersRunnerFactory;
 
@@ -87,15 +85,15 @@ import static org.junit.runners.Parameterized.UseParametersRunnerFactory;
 @Category(SlowTest.class)
 public class MembershipFailureTest extends HazelcastTestSupport {
 
-    @Parameterized.Parameters(name = "fd:{0}")
+    @Parameters(name = "fd:{0}")
     public static Collection<ClusterFailureDetectorType> parameters() {
-        return Arrays.asList(ClusterFailureDetectorType.values());
+        return List.of(ClusterFailureDetectorType.values());
     }
 
-    @Parameterized.Parameter
+    @Parameter
     public ClusterFailureDetectorType failureDetectorType;
 
-    private TestHazelcastInstanceFactory factory;
+    protected TestHazelcastInstanceFactory factory;
 
     @Before
     public void init() {
@@ -210,7 +208,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSizeEventually(4, masterCandidate, slave1);
 
         // drop FETCH_MEMBER_LIST_STATE packets to block mastership claim process
-        dropOperationsBetween(masterCandidate, slave1, F_ID, singletonList(FETCH_MEMBER_LIST_STATE));
+        dropOperationsBetween(masterCandidate, slave1, F_ID, List.of(FETCH_MEMBER_LIST_STATE));
 
         terminateInstance(master);
 
@@ -238,7 +236,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSizeEventually(4, masterCandidate, slave1);
 
         // drop FETCH_MEMBER_LIST_STATE packets to block mastership claim process
-        dropOperationsBetween(masterCandidate, slave1, F_ID, singletonList(FETCH_MEMBER_LIST_STATE));
+        dropOperationsBetween(masterCandidate, slave1, F_ID, List.of(FETCH_MEMBER_LIST_STATE));
 
         terminateInstance(master);
 
@@ -265,7 +263,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSize(3, master, slave2);
         assertClusterSizeEventually(3, slave1);
 
-        dropOperationsFrom(slave2, F_ID, singletonList(HEARTBEAT));
+        dropOperationsFrom(slave2, F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(2, master, slave1);
         assertClusterSizeEventually(1, slave2);
@@ -283,9 +281,9 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSize(3, master, slave2);
         assertClusterSizeEventually(3, slave1);
 
-        dropOperationsFrom(master, F_ID, singletonList(HEARTBEAT));
-        dropOperationsFrom(slave1, F_ID, singletonList(HEARTBEAT_COMPLAINT));
-        dropOperationsFrom(slave2, F_ID, singletonList(HEARTBEAT_COMPLAINT));
+        dropOperationsFrom(master, F_ID, List.of(HEARTBEAT));
+        dropOperationsFrom(slave1, F_ID, List.of(HEARTBEAT_COMPLAINT));
+        dropOperationsFrom(slave2, F_ID, List.of(HEARTBEAT_COMPLAINT));
 
         assertClusterSizeEventually(1, master);
         assertClusterSizeEventually(2, slave1, slave2);
@@ -303,7 +301,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSizeEventually(3, slave1);
 
         // prevent heartbeat from master to slave to prevent suspect to be removed
-        dropOperationsBetween(master, slave1, F_ID, singletonList(HEARTBEAT));
+        dropOperationsBetween(master, slave1, F_ID, List.of(HEARTBEAT));
         suspectMember(slave1, master);
 
         assertClusterSizeEventually(2, master, slave2);
@@ -321,7 +319,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSize(3, master, slave2);
         assertClusterSizeEventually(3, slave1);
 
-        dropOperationsBetween(slave2, slave1, F_ID, singletonList(HEARTBEAT));
+        dropOperationsBetween(slave2, slave1, F_ID, List.of(HEARTBEAT));
 
         MembershipManager membershipManager = getNode(slave1).getClusterService().getMembershipManager();
         assertTrueEventually(() -> {
@@ -353,10 +351,10 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSize(4, master, slave3);
         assertClusterSizeEventually(4, slave1, slave2);
 
-        dropOperationsFrom(master, F_ID, singletonList(HEARTBEAT));
-        dropOperationsFrom(slave1, F_ID, singletonList(HEARTBEAT));
-        dropOperationsFrom(slave2, F_ID, singletonList(HEARTBEAT));
-        dropOperationsFrom(slave3, F_ID, singletonList(HEARTBEAT));
+        dropOperationsFrom(master, F_ID, List.of(HEARTBEAT));
+        dropOperationsFrom(slave1, F_ID, List.of(HEARTBEAT));
+        dropOperationsFrom(slave2, F_ID, List.of(HEARTBEAT));
+        dropOperationsFrom(slave3, F_ID, List.of(HEARTBEAT));
 
         // Wait until the max possible retries of send task completes:
         // Properties of packet send task are as follows:
@@ -406,7 +404,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSizeEventually(3, slave1);
         assertClusterSize(3, slave2);
 
-        rejectOperationsBetween(master, slave1, F_ID, singletonList(MEMBER_INFO_UPDATE));
+        rejectOperationsBetween(master, slave1, F_ID, List.of(MEMBER_INFO_UPDATE));
 
         HazelcastInstance slave3 = newHazelcastInstance(config);
 
@@ -433,7 +431,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSizeEventually(3, slave1);
         // master, slave1, slave2
 
-        rejectOperationsBetween(master, slave1, F_ID, singletonList(MEMBER_INFO_UPDATE));
+        rejectOperationsBetween(master, slave1, F_ID, List.of(MEMBER_INFO_UPDATE));
 
         HazelcastInstance slave3 = newHazelcastInstance(config);
         // master, slave1, slave2, slave3
@@ -441,7 +439,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSizeEventually(4, slave3, slave2);
         assertClusterSize(3, slave1);
 
-        rejectOperationsBetween(master, asList(slave1, slave2), F_ID, singletonList(MEMBER_INFO_UPDATE));
+        rejectOperationsBetween(master, List.of(slave1, slave2), F_ID, List.of(MEMBER_INFO_UPDATE));
 
         HazelcastInstance slave4 = newHazelcastInstance(config);
         // master, slave1, slave2, slave3, slave4
@@ -450,7 +448,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSizeEventually(4, slave2);
         assertClusterSize(3, slave1);
 
-        rejectOperationsBetween(master, asList(slave1, slave2, slave3), F_ID, singletonList(MEMBER_INFO_UPDATE));
+        rejectOperationsBetween(master, List.of(slave1, slave2, slave3), F_ID, List.of(MEMBER_INFO_UPDATE));
 
         HazelcastInstance slave5 = newHazelcastInstance(config);
         // master, slave1, slave2, slave3, slave4, slave5
@@ -479,7 +477,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
 
         assertClusterSize(2, master, slave1);
 
-        rejectOperationsBetween(master, slave1, F_ID, singletonList(MEMBER_INFO_UPDATE));
+        rejectOperationsBetween(master, slave1, F_ID, List.of(MEMBER_INFO_UPDATE));
 
         HazelcastInstance slave2 = newHazelcastInstance(config);
         assertClusterSize(3, master);
@@ -515,9 +513,9 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         });
 
         // prevent heartbeats to member3 to prevent suspicion to be removed
-        dropOperationsBetween(member1, member3, F_ID, singletonList(HEARTBEAT));
-        dropOperationsBetween(member2, member3, F_ID, singletonList(HEARTBEAT));
-        dropOperationsFrom(member3, F_ID, singletonList(SPLIT_BRAIN_MERGE_VALIDATION));
+        dropOperationsBetween(member1, member3, F_ID, List.of(HEARTBEAT));
+        dropOperationsBetween(member2, member3, F_ID, List.of(HEARTBEAT));
+        dropOperationsFrom(member3, F_ID, List.of(SPLIT_BRAIN_MERGE_VALIDATION));
         suspectMember(member3, member1);
         suspectMember(member3, member2);
         assertClusterSizeEventually(1, member3);
@@ -548,13 +546,13 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         config.setProperty(ClusterProperty.PARTITION_MIGRATION_INTERVAL.getName(), "1");
         config.setProperty(ClusterProperty.PARTITION_COUNT.getName(), "12");
 
-        HazelcastInstance master = factory.newHazelcastInstance(config);
-        final HazelcastInstance masterCandidate = factory.newHazelcastInstance(config);
-        HazelcastInstance slave = factory.newHazelcastInstance(config);
+        HazelcastInstance master = newHazelcastInstance(config);
+        final HazelcastInstance masterCandidate = newHazelcastInstance(config);
+        HazelcastInstance slave = newHazelcastInstance(config);
 
         warmUpPartitions(master, masterCandidate, slave);
 
-        Future shutdownF = spawn(masterCandidate::shutdown);
+        Future<?> shutdownF = spawn(masterCandidate::shutdown);
 
         sleepSeconds(2);
         if (terminate) {
@@ -581,13 +579,13 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSize(4, member1, member4);
         assertClusterSizeEventually(4, member2, member3);
 
-        dropOperationsFrom(member1, F_ID, asList(MEMBER_INFO_UPDATE, HEARTBEAT));
-        dropOperationsFrom(member2, F_ID, singletonList(FETCH_MEMBER_LIST_STATE));
+        dropOperationsFrom(member1, F_ID, List.of(MEMBER_INFO_UPDATE, HEARTBEAT));
+        dropOperationsFrom(member2, F_ID, List.of(FETCH_MEMBER_LIST_STATE));
 
         // If we allow explicit suspicions from member3, when member4 sends a heartbeat to member3
         // after member3 splits from the cluster, member3 will send an explicit suspicion to member4
         // and member4 will start its own mastership claim.
-        dropOperationsFrom(member3, F_ID, asList(FETCH_MEMBER_LIST_STATE, EXPLICIT_SUSPICION));
+        dropOperationsFrom(member3, F_ID, List.of(FETCH_MEMBER_LIST_STATE, EXPLICIT_SUSPICION));
 
         suspectMember(member2, member3);
         suspectMember(member3, member2);
@@ -598,7 +596,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         suspectMember(member4, member2);
 
         // member2 will complete mastership claim, but member4 won't learn new member list
-        dropOperationsFrom(member2, F_ID, singletonList(MEMBER_INFO_UPDATE));
+        dropOperationsFrom(member2, F_ID, List.of(MEMBER_INFO_UPDATE));
         // member4 should accept member2 as master during mastership claim
         assertMasterAddressEventually(getAddress(member2), member4);
         resetPacketFiltersFrom(member3);
@@ -627,9 +625,9 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertClusterSize(4, member1, member4);
         assertClusterSizeEventually(4, member2, member3);
 
-        dropOperationsFrom(member1, F_ID, asList(MEMBER_INFO_UPDATE, HEARTBEAT));
-        dropOperationsFrom(member2, F_ID, asList(FETCH_MEMBER_LIST_STATE, HEARTBEAT));
-        dropOperationsFrom(member3, F_ID, singletonList(FETCH_MEMBER_LIST_STATE));
+        dropOperationsFrom(member1, F_ID, List.of(MEMBER_INFO_UPDATE, HEARTBEAT));
+        dropOperationsFrom(member2, F_ID, List.of(FETCH_MEMBER_LIST_STATE, HEARTBEAT));
+        dropOperationsFrom(member3, F_ID, List.of(FETCH_MEMBER_LIST_STATE));
 
         suspectMember(member2, member3);
         suspectMember(member3, member2);
@@ -640,7 +638,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         suspectMember(member4, member2);
 
         // member3 will complete mastership claim, but member4 won't learn new member list
-        dropOperationsFrom(member3, F_ID, singletonList(MEMBER_INFO_UPDATE));
+        dropOperationsFrom(member3, F_ID, List.of(MEMBER_INFO_UPDATE));
         // member4 should accept member3 as master during mastership claim
         assertMasterAddressEventually(getAddress(member3), member4);
         resetPacketFiltersFrom(member2);
@@ -690,9 +688,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         Member member2 = instance2.getCluster().getLocalMember();
         Member member3 = instance3.getCluster().getLocalMember();
 
-
-        dropOperationsBetween(instance2, instance3, F_ID, singletonList(HEARTBEAT));
-
+        dropOperationsBetween(instance2, instance3, F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(2, instance1);
         Set<Member> members = instance1.getCluster().getMembers();
@@ -716,10 +712,8 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         Member member3 = instance3.getCluster().getLocalMember();
         Member member4 = instance4.getCluster().getLocalMember();
 
-
-        dropOperationsBetween(instance2, instance4, F_ID, singletonList(HEARTBEAT));
-        dropOperationsBetween(instance3, instance4, F_ID, singletonList(HEARTBEAT));
-
+        dropOperationsBetween(instance2, instance4, F_ID, List.of(HEARTBEAT));
+        dropOperationsBetween(instance3, instance4, F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(3, instance1);
         Set<Member> members = instance1.getCluster().getMembers();
@@ -745,9 +739,7 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         Member member3 = instance3.getCluster().getLocalMember();
         Member member4 = instance4.getCluster().getLocalMember();
 
-
-        dropOperationsBetween(instance4, Arrays.asList(instance2, instance3), F_ID, singletonList(HEARTBEAT));
-
+        dropOperationsBetween(instance4, List.of(instance2, instance3), F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(3, instance1);
         Set<Member> members = instance1.getCluster().getMembers();
@@ -775,11 +767,9 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         Member member5 = instance5.getCluster().getLocalMember();
         Member member6 = instance6.getCluster().getLocalMember();
 
-
-        dropOperationsBetween(instance2, Arrays.asList(instance5, instance6), F_ID, singletonList(HEARTBEAT));
-        dropOperationsBetween(instance3, Arrays.asList(instance5, instance6), F_ID, singletonList(HEARTBEAT));
-        dropOperationsBetween(instance4, Arrays.asList(instance5, instance6), F_ID, singletonList(HEARTBEAT));
-
+        dropOperationsBetween(instance2, List.of(instance5, instance6), F_ID, List.of(HEARTBEAT));
+        dropOperationsBetween(instance3, List.of(instance5, instance6), F_ID, List.of(HEARTBEAT));
+        dropOperationsBetween(instance4, List.of(instance5, instance6), F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(5, instance1, instance2, instance3, instance4, instance7);
         Set<Member> members = instance1.getCluster().getMembers();
@@ -806,10 +796,8 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         Member member5 = instance5.getCluster().getLocalMember();
         Member member6 = instance6.getCluster().getLocalMember();
 
-
-        dropOperationsBetween(instance5, Arrays.asList(instance2, instance3, instance4), F_ID, singletonList(HEARTBEAT));
-        dropOperationsBetween(instance6, Arrays.asList(instance2, instance3, instance4), F_ID, singletonList(HEARTBEAT));
-
+        dropOperationsBetween(instance5, List.of(instance2, instance3, instance4), F_ID, List.of(HEARTBEAT));
+        dropOperationsBetween(instance6, List.of(instance2, instance3, instance4), F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(5, instance1, instance2, instance3, instance4, instance7);
         Set<Member> members = instance1.getCluster().getMembers();
@@ -833,10 +821,8 @@ public class MembershipFailureTest extends HazelcastTestSupport {
 
         Member member3 = instance3.getCluster().getLocalMember();
 
-
-        dropOperationsBetween(instance2, instance3, F_ID, singletonList(HEARTBEAT));
-        dropOperationsBetween(instance3, Arrays.asList(instance4, instance5), F_ID, singletonList(HEARTBEAT));
-
+        dropOperationsBetween(instance2, instance3, F_ID, List.of(HEARTBEAT));
+        dropOperationsBetween(instance3, List.of(instance4, instance5), F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(4, instance1, instance2, instance4, instance5);
         Set<Member> members = instance1.getCluster().getMembers();
@@ -874,10 +860,8 @@ public class MembershipFailureTest extends HazelcastTestSupport {
 
         changeClusterStateEventually(instance1, clusterState);
 
-
-        dropOperationsBetween(instance2, instance4, F_ID, singletonList(HEARTBEAT));
-        dropOperationsBetween(instance3, instance4, F_ID, singletonList(HEARTBEAT));
-
+        dropOperationsBetween(instance2, instance4, F_ID, List.of(HEARTBEAT));
+        dropOperationsBetween(instance3, instance4, F_ID, List.of(HEARTBEAT));
 
         assertClusterSizeEventually(3, instance1);
         Set<Member> members = instance1.getCluster().getMembers();
@@ -912,32 +896,35 @@ public class MembershipFailureTest extends HazelcastTestSupport {
         assertOpenEventually(latch);
     }
 
-    HazelcastInstance newHazelcastInstance() {
-        return newHazelcastInstance(smallInstanceConfig());
+    @Override
+    protected Config getConfig() {
+        return smallInstanceConfig();
     }
 
-    HazelcastInstance newHazelcastInstance(Config config) {
+    protected Config initConfig(Config config) {
         config.setProperty(ClusterProperty.HEARTBEAT_FAILURE_DETECTOR_TYPE.getName(), failureDetectorType.toString());
-        return factory.newHazelcastInstance(config);
+        return config;
     }
 
-    Collection<HazelcastInstance> getAllHazelcastInstances() {
+    private HazelcastInstance newHazelcastInstance() {
+        return newHazelcastInstance(getConfig());
+    }
+
+    private HazelcastInstance newHazelcastInstance(Config config) {
+        return factory.newHazelcastInstance(initConfig(config));
+    }
+
+    private Collection<HazelcastInstance> getAllHazelcastInstances() {
         return factory.getAllHazelcastInstances();
     }
 
-    private static class LatchService {
+    private record LatchService(CountDownLatch latch) {
         static final String SERVICE_NAME = "latch-service";
-
-        final CountDownLatch latch;
-
-        private LatchService(CountDownLatch latch) {
-            this.latch = latch;
-        }
     }
 
     private static class UrgentOperationAwaitOn extends Operation implements UrgentSystemOperation {
         @Override
-        public void run() throws Exception {
+        public void run() {
             LatchService service = getService();
             service.latch.countDown();
             getLogger().info("Count down on latch");
